i hope its complete now. never.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="work ha-waypoint" id="work">
       <div class="design2 design_top animated zoomInLeft"></div>
       <div class="design2 animated zoomInLeft"></div>
-        <h1 class="workH">Work</h1>
+        <h1 class="workH">work</h1>
         <p class="paraWork lead pb-3">Design should impress. Design should please. Design should rock. But most importantly, design should sell - literally and metaphorically</p>
         <hr>
 
@@ -121,7 +121,7 @@
           <br>
 
         <p class="paraWorkTwo pb-2">
-        I'm a magician. The trick is simple. You learn something, from the greats, for a very long period of time. Keep failing. Keep succeeding. Keep failing, again. And one day, not pretty far away. Become better than the greats. P.S, I don't look as bad as the pictures below. I tend to stay neat. </p>
+        I'm a magician. I'm a craftsman. The trick is simple. You learn something, from the greats, for a very long period of time. Keep failing. Keep succeeding. Keep failing, again. And one day, not pretty far away. Become better than the greats. P.S, I don't look as bad as the pictures below. I tend to stay neat. </p>
         </p>
         </div>
         </div>
@@ -131,7 +131,7 @@
 
     <!-- PORTFOLIO Page 2-->
       <div class="portfolio ha-waypoint mb-4">
-        <h1 class="display-2 text-center things">Things I have created</h1>
+        <h1 class="display-2 text-center things">things i have created</h1>
         <p class="text-center lead mb-4">I’ve always been inspired by random things like smart infographics, beautiful photos, motivational quotes, master design pieces, and all sorts of quirky stuff</p>
 
         <!-- REELS -->
@@ -168,26 +168,26 @@
         <div class="col-lg-4">
         <p class="paraAboutTwo pt-4">
 
-        I'm a learner. By that, what I mean is, that there is nothing, absolutely nothing, I cannot do. The process is simple, extremely simple. If I want to do something, I learn it from the greats, and eventually, at some point of time become greater. I've done web design throughout my life. Soon not before, I finally realised that I’m way too interested in the technical part of the process, and calling myself a “nerd” sounded more like a compliment than an insult. Someone really smart once told me, in order to understand your interests, you have to differentiate between that line, that very thin line, between the essence of 'doing', and 'crafting'. When I look at a web application, I always feel how much better I could have 'crafted' the same exact thing. Because when you craft something, you spend nights and nights on those minor details, which no one would actually care about. Somewhere deep down, I love that process.</p>
+        I'm a learner. By that, what I mean is, that there is nothing, absolutely nothing, I cannot do. The process is simple, extremely simple. If I want to do something, I learn it from the greats, and eventually, at some point of time become greater. I've done web design throughout my life. Soon not before, I finally realised that I’m way too interested in the technical part of the process, and calling myself a “nerd” sounded more like a compliment than an insult.</p>
 
           <br>
 
         <p class="paraAboutTwo">
-        I started my professional career in web development few years ago doing freelance projects, which was then followed by a supericious interest in UX/UI development. I studied economics and management in school, but not in order to persue my career into that field, only to make my brain smarter, and absorb different ideas, and learn distinctive aspects quicker. Although talking big marketing words and clichés is not my favourite bit, it was still pretty cool because this experience helped me to learn how to deal with clients and stakeholders, and gain knowledge of how important it is to understand your client’s needs in order to achieve the final “wow” effect.
+        I started my career in web development few years ago, which was then followed by a supericious interest in UX/UI development. I believe how important it is to understand your client’s needs in order to achieve the final “wow” effect. That wow satisfies me, internally.
         </p>
 
           <br>
           </div>
           <div class="col-lg-4">
         <p class="paraAboutTwo pt-4">
-        However, it soon became apparent that I really enjoyed spending time with the designers and developers and understanding how they do their magic. I started trying it myself and I naturally gravitated to web design and development.
-        Shortly after, I embarked on a freelance career which gave me the freedom to work on all sorts of projects with different kinds of businesses - from charities and environmental organisations, to fitness instructors, boxing events and weapons resellers. Some people find it shocking that I pride myself with creating the only online shop that sells a dildo in the shape of Queen Elizabeth II, but the braver the project, the more I enjoy working on it.
+        It soon became apparent that I really enjoyed spending time with the designers and developers and understanding how they do their magic. I started trying it myself and I naturally gravitated to web design and development.
+        I might not be the best right now. But soon enough, I know I will.
         </p>
 
           <br>
 
         <p class="paraAboutTwo">
-        My specialty is web design and front-end development, working on pixel tricks in Photoshop and Adobe Illustrator and turning them into beautiful, semantic HTML & CSS as well as making them interactive through the intelligence of JavaScript. I have solid experience with frameworks like Wordpress and Twitter Bootstrap.
+        My specialty is web design and front-end development, working on pixel tricks in Photoshop and Adobe Illustrator and turning them into beautiful, semantic HTML & CSS as well as making them interactive through the intelligence of JavaScript.
         </p>
 
           <br>
