complete it now maaayn

--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
         <div class="col-lg-4">
         <p class="paraAboutTwo pt-4">
 
-        I'm a learner. By that, what I mean is, that there is nothing, absolutely nothing, I cannot do. The process is simple, extremely simple. If I want to do something, I learn it from the greats, and eventually, at some point of time become greater. I've done web design throughout my life. Soon not before, I finally realised that I’m way too interested in the technical part of the process, and calling myself a “nerd” sounded more like a compliment than an insult.</p>
+        I'm a learner. By that, what I mean is, that there is nothing, absolutely nothing, I cannot do. I've done web design throughout my life. Soon not before, I finally realised that I’m way too interested in the technical part of the process, and calling myself a “nerd” sounded more like a compliment than an insult.</p>
 
           <br>
 
         <p class="paraAboutTwo">
-        I started my career in web development few years ago, which was then followed by a supericious interest in UX/UI development. I believe how important it is to understand your client’s needs in order to achieve the final “wow” effect. That wow satisfies me, internally.
+        I started my career in web development few years ago, which was then followed by a supericious interest in UX/UI development. I believe how important it is to understand your client’s needs in order to achieve the final “wow” effect.
         </p>
 
           <br>
           </div>
           <div class="col-lg-4">
         <p class="paraAboutTwo pt-4">
-        It soon became apparent that I really enjoyed spending time with the designers and developers and understanding how they do their magic. I started trying it myself and I naturally gravitated to web design and development.
+        I enjoyed spending time with the designers and developers and understanding how they do their magic. I started trying it myself and I naturally gravitated to web design and development.
         I might not be the best right now. But soon enough, I know I will.
         </p>
 
