--- a/CarCrash/indexCrash.html
+++ b/CarCrash/indexCrash.html
@@ -28,6 +28,10 @@
         <h1 class="text-center switch_text">Oops, please switch to your desktop.</h1>
       </div>
 
+      <div id="controls">
+        <h1 class="text-white controls">Use arrows to control.</h1>
+      </div>
+
 
    <div id="score-div">
      Score: <span id="score">0</span>
