--- a/eagle/indexEagle.html
+++ b/eagle/indexEagle.html
@@ -26,6 +26,10 @@
         <h1 class="text-center switch_text">Oops, please switch to your desktop.</h1>
       </div>
 
+      <div id="controls">
+        <h1 class="controls">Use spacebar to control the bird.</h1>
+      </div>
+
   <!-- START HOMEPAGE CODE -->
   <div id="container">
     <div id="bird"></div>
