--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               <br>
 
             <p class="thanksPara">
-          Now you've got 2 options ... drop me a line and let me learn something about you or if you'd like to hire me for your next project, please fill in this questionnaire to get your free quote.
+          Now you've got 2 options ... drop me a line and let me learn something about you or if you'd like to hire me for your next project, please call me at (630) 936-8294. Or, by email parasbokhari@gmail.com.
             </p>
 
               <br>
