--- a/Shooter/indexShooter.html
+++ b/Shooter/indexShooter.html
@@ -27,6 +27,10 @@
         <h1 class="text-center switch_text">Oops, please switch to your desktop.</h1>
       </div>
 
+      <div id="controls">
+        <h1 class="text-white controls">Spacebar to shoot, <br> arrows to control.</h1>
+      </div>
+
 
   <div id="score_div">
     Score: <span id="score">0</span>
