--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111625564-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-111625564-1');
+    </script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Kanit:700" rel="stylesheet">
@@ -414,9 +424,9 @@
           <div class="container">
             <p class="text-center text_2_para mt-4 footer_text_2">Don't just be another brick in the wall.<br> <br><p class="text-right text_2_para footer_text_2 skyblue">-pink floyd</p>
             <ul class="nav justify-content-center mt-4 ml-3">
-                <li class="nav-item footer_item"><a href="#" class="pr-2"><i class="fa fa-twitter fa-2x text-center"></i></a></li>
-                <li class="nav-item footer_item"><a href="#" class="pr-2"><i class="fa fa-instagram fa-2x text-center"></i></a></li>
-                <li class="nav-item footer_item"><a href="#" class="pr-2"><i class="fa fa-facebook fa-2x text-center"></i></a></li>
+                <li class="nav-item footer_item"><a href="https://twitter.com/bokhariLovesYou" target="_blank" class="pr-2"><i class="fa fa-twitter fa-2x text-center"></i></a></li>
+                <li class="nav-item footer_item"><a href="https://www.instagram.com/shahenshahbokhari/" target="_blank" class="pr-2"><i class="fa fa-instagram fa-2x text-center"></i></a></li>
+                <li class="nav-item footer_item"><a href="https://www.facebook.com/shaynshah" target="_blank" class="pr-2"><i class="fa fa-facebook fa-2x text-center"></i></a></li>
             </ul>
           </div>
       </footer>
