--- a/clickX/indexClick.html
+++ b/clickX/indexClick.html
@@ -166,7 +166,7 @@
     <script src="resources/js/jquery.waypoints.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="lightbox/jquery.magnific-popup.min.js"></script>
+<script src="https://unpkg.com/jarallax@1.9/dist/jarallax.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="resources/js/jquery.waypoints.min.js"></script>
   </body>
