--- a/clickX/indexClick.html
+++ b/clickX/indexClick.html
@@ -35,7 +35,7 @@
 
   <!-- Section 1 -->
   <section id="primary">
-    <div id="first_section" data-stellar-background-ratio="0" class="tint">
+    <div id="first_section" data-stellar-background-ratio="1" class="tint">
       <img class="siteX" src="resources/images/Sitex-Logo-Blue1.svg" alt="billyLogo" id="logo">
         <div class="wrapper">
           <div class="navbar">
@@ -103,7 +103,7 @@
 
 <!-- Section 3 -->
 <section id="tirtiary">
-  <div id="third_section" data-stellar-background-ratio="0" class="third_section">
+  <div id="third_section" data-stellar-background-ratio="0.5" class="third_section">
   <div class="absolut">
     <h1 class="heading text-center small height testi playing">“<span class="n">W</span>ould I recommend Sitex? I definitely would. I think they really, really did a great job getting all of my thoughts and ideas onto paper and creating a plan of action that was easy for me to follow.”<br> Ted C.</h1>
     </div>
@@ -119,21 +119,21 @@
     <h1 class="heading black mt-5 case">case studies</h1>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 reel reel_One tint" data-stellar-background-ratio="0">
+        <div class="col-md-4 reel reel_One tint" data-stellar-background-ratio="0.5">
         </div>
-        <div class="col-md-4 reel reel_Two tint" data-stellar-background-ratio="0">
+        <div class="col-md-4 reel reel_Two tint" data-stellar-background-ratio="0.5">
         </div>
-        <div class="col-md-4 reel reel_Three tint" data-stellar-background-ratio="0">
+        <div class="col-md-4 reel reel_Three tint" data-stellar-background-ratio="0.5">
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 reel reel_Four tint" data-stellar-background-ratio="0">
+        <div class="col-md-4 reel reel_Four tint" data-stellar-background-ratio="0.5">
         </div>
-        <div class="col-md-4 reel reel_Five tint" data-stellar-background-ratio="0">
+        <div class="col-md-4 reel reel_Five tint" data-stellar-background-ratio="0.5">
         </div>
-        <div class="col-md-4 reel reel_Six tint" data-stellar-background-ratio="0">
+        <div class="col-md-4 reel reel_Six tint" data-stellar-background-ratio="0.5">
         </div>
       </div>
     </div>
@@ -166,9 +166,9 @@
     <script src="resources/js/jquery.waypoints.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="resources/js/jquery.stellar.min.js"></script>
+<script src="https://unpkg.com/jarallax@1.9/dist/jarallax.min.js"></script>
+<script src="https://unpkg.com/jarallax@1.9/dist/jarallax-element.min.js"></script>
     <script>
-$.stellar({ horizontalScrolling: false });;
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="resources/js/jquery.waypoints.min.js"></script>
